objects/BIN_Asset__c.object
<CustomObject>
    <fields>
        <fullName>BIN_Colour__c</fullName>
        <label>Colour</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BIN_Core_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Address</label>
        <referenceTo>CORE_Address__c</referenceTo>
        <relationshipLabel>BIN Assets</relationshipLabel>
        <relationshipName>BIN_Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BIN_Size__c</fullName>
        <label>Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>140L</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>BIN Asset</label>
    <nameField>
        <displayFormat>BIN-{00000000}</displayFormat>
        <label>BIN Asset Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BIN Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>